--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ reqwest = { version = "0.11", features = ["blocking"] }
 csv = "1.2"
 anyhow = "1.0"
 polars = { version = "0.37.0", features = ["csv", "lazy"] }
+rand = "0.8.5"
