--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 reqwest = { version = "0.11", features = ["blocking"] }
 csv = "1.2"
 anyhow = "1.0"
-polars = { version = "0.37.0", features = ["csv", "lazy"] }
+polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
 rand = "0.8.5"
+xgboost = "0.1.4"
