--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ anyhow = "1.0"
 polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
 rand = "0.8.5"
 xgboost = "0.1.4"
+aws-config = "1.5.10"
+aws-sdk-s3 = "1.65.0"
