--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rand = "0.8.5"
 xgboost = "0.1.4"
 aws-config = "1.5.10"
 aws-sdk-s3 = "1.65.0"
+tokio = { version = "1.42.0", features = ["full"] }
