--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "house-price-predictor"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "train"
+path = "src/bin/train.rs"
+
+[[bin]]
+name = "api"
+path = "src/bin/api.rs"
+
 [dependencies]
 reqwest = { version = "0.11", features = ["blocking"] }
 csv = "1.2"
