--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,13 @@ name = "api"
 path = "src/bin/api.rs"
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking"] }
-csv = "1.2"
+actix-web = "4.9.0"
 anyhow = "1.0"
-polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
-rand = "0.8.5"
-xgboost = "0.1.4"
 aws-config = "1.5.10"
 aws-sdk-s3 = "1.65.0"
+csv = "1.2"
+polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
+rand = "0.8.5"
+reqwest = { version = "0.11", features = ["blocking"] }
 tokio = { version = "1.42.0", features = ["full"] }
+xgboost = "0.1.4"
