--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,7 @@ csv = "1.2"
 polars = { version = "0.37.0", features = ["csv", "lazy", "ndarray"] }
 rand = "0.8.5"
 reqwest = { version = "0.11", features = ["blocking"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.42.0", features = ["full"] }
 xgboost = "0.1.4"
